--- a/app/src/main/res/layout/activity_make_quiz.xml
+++ b/app/src/main/res/layout/activity_make_quiz.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#6495ED"
     tools:context=".MakeQuiz">
 
     <TextView
@@ -13,6 +14,7 @@
         android:text="Question:"
         android:textStyle="bold"
         android:textSize="20dp"
+        android:textColor="@color/white"
         android:id="@+id/questionNumber"
         android:layout_marginTop="10dp"
         />
@@ -22,6 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Write your Question"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:id="@+id/question"
         />
 
@@ -46,6 +50,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/option1"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
                 android:hint="Option 1"
                 />
 
@@ -63,6 +69,8 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
                 android:id="@+id/option2"
                 android:hint="Option 2"
                 />
@@ -82,6 +90,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/option3"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
                 android:hint="Option 3"
                 />
 
@@ -100,6 +110,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/option4"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
                 android:hint="Option 4"
                 />
 
@@ -140,6 +152,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Correct Answer"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
         android:id="@+id/correct"
         android:layout_marginTop="50dp"
         />
@@ -153,12 +167,15 @@
             android:layout_height="wrap_content"
             android:text="Next"
             android:id="@+id/nextQuesBTN"
+            android:background="@drawable/rounded_button"
             android:textAllCaps="false"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/finishBTN"
+            android:layout_marginTop="10dp"
             android:text="Finish"
+            android:background="@drawable/rounded_button"
             android:textAllCaps="false"/>
 
 
