--- a/app/src/main/res/layout/activity_student_score.xml
+++ b/app/src/main/res/layout/activity_student_score.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#6495ED"
     tools:context=".StudentScore">
 
     <TextView
@@ -13,6 +14,7 @@
         android:id="@+id/tv_score"
         android:layout_gravity="center_vertical"
         android:gravity="center_horizontal"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="24dp"
         />
