--- a/app/src/main/res/layout/activity_teacher_page.xml
+++ b/app/src/main/res/layout/activity_teacher_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#6495ED"
     tools:context=".TeacherPage">
 
 
@@ -17,7 +18,7 @@
             android:layout_width="289dp"
             android:layout_height="58dp"
             android:layout_gravity="center"
-            android:backgroundTint="#7B1FA2"
+            android:background="@drawable/rounded_button"
             android:text="Make Quiz"
             android:textAllCaps="false"
             android:textSize="18dp" />
@@ -27,7 +28,7 @@
             android:layout_height="58dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:backgroundTint="#7B1FA2"
+            android:background="@drawable/rounded_button"
             android:text="Student Result"
             android:textAllCaps="false"
             android:textSize="18dp" />
